adding button function

--- a/develop/index.html
+++ b/develop/index.html
@@ -9,14 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>JavaScrip Quiz</h1>
+        <h1 class="page-title">JavaScrip Quiz</h1>
+        <p>Click the button to start the quiz!</p>
+        <button class="btn" id="start-quiz" > Start Quiz!</button>
     </header>
-    <section>
-        <div>
-            <h2>This is a quiz of your JavaScript knowledge-- ENJOY!</h2>
-        </div>
-        <button class="butn">Start Quiz</button>
-    </section>
+    
 </body>
 <script src="./Assets/js/script.js"></script>
 </html>
