attempting to create functions

--- a/develop/index.html
+++ b/develop/index.html
@@ -9,10 +9,19 @@
 </head>
 <body>
     <header>
-        <h1 class="page-title">JavaScrip Quiz</h1>
+        <h1 id="pageTitle">JavaScrip Quiz</h1>
         <p>Click the button to start the quiz!</p>
-        <button class="btn" id="start-quiz" > Start Quiz!</button>
+        <button id="startQuiz" >Start Quiz!</button>
     </header>
+    <main>
+        <div class="quiz-container">
+        <div id="quiz"></div>
+    </div>
+    <button id="previous">previous question</button>
+    <button id="next">next question</button>
+        <button id="submit">Submit</button>
+        <div id="results"></div>
+    </main>
     
 </body>
 <script src="./Assets/js/script.js"></script>
