--- a/develop/index.html
+++ b/develop/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/css/">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Quiz</title>
+    <link rel="stylesheet" href="https://use.typekit.net/gxk0hta.css">
 </head>
 <body>
     <header>
@@ -13,15 +14,19 @@
         <p>Click the button to start the quiz!</p>
         <button id="startQuiz" >Start Quiz!</button>
     </header>
-    <main>
-        <div class="quiz-container">
-        <div id="quiz"></div>
+    <div class="container"></div>
+    <div id="question-container" class="hide"></div>
+    <div id="question">Question</div>
+    <div id="answer-buttons" class="btn-grid">
+        <button class="btn">Answer 1</button>
+        <button class="btn">Answer 2</button>
+        <button class="btn">Answer 3</button>
+        <button class="btn">Answer 4</button>
     </div>
-    <button id="previous">previous question</button>
-    <button id="next">next question</button>
-        <button id="submit">Submit</button>
-        <div id="results"></div>
-    </main>
+    <div class="controls">
+        <button id="start-btn" class="start-btn btn">Start the quiz!</button>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
+    </div>
     
 </body>
 <script src="./Assets/js/script.js"></script>
