added ability to show score

--- a/develop/index.html
+++ b/develop/index.html
@@ -23,6 +23,7 @@
         <button class="btn" id="q3">Answer 3</button>
         <button class="btn" id="q4">Answer 4</button>
     </div>
+    <div id="scores" class="hide"></div>
     
 </body>
 <script src="./Assets/js/script.js"></script>
