--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link rel="stylesheet" href="./develop/Assets/css/style.css">
     <title>Quiz</title>
     <link rel="stylesheet" href="https://use.typekit.net/gxk0hta.css">
 </head>
@@ -26,5 +26,5 @@
     <div id="scores" class="hide"></div>
     
 </body>
-<script src="./Assets/js/script.js"></script>
+<script src="./develop/Assets/js/script.js"></script>
 </html>
